@@ -1,0 +1,224 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML>
+<HEAD>
+   <META http-equiv="Content-Type" content="text/html;charset=iso-8859-1">
+   <TITLE>Gdcm supported formats</TITLE>
+</HEAD>
+
+<BODY>
+
+<!#######################################################################>
+<H1>Gdcm DICOM v3.0 conformance summary</H1>
+<HR size="1"><ADDRESS style="align: right;"></ADDRESS>
+
+<!#######################>
+<H2>Introduction</H2>
+
+This section is an abbreviated DICOM conformance statement for gdcm.
+<BR>
+It specifies the compliance of gdcm to file reading/writing
+support to the
+<A HREF="http://www.dclunie.com/dicom-status/status.html">
+          dicom base standard <B>part 5</B></A>.
+<BR>
+Gdcm <B>does not contain or support any of the DICOM services</B>
+such as Storage, Query/Retrieve, Print, Verification...
+
+<!##############################################>
+<H2>Supported transfer syntaxes</H2>
+The Transfer Syntax UID is in the file's DICOM Tag field (0002,0010).
+
+<TABLE WIDTH="800" BORDER="0" CELLSPACING="1" CELLPADDING="10"
+       BGCOLOR="#ffffff">
+<!####### Uncompressed #########>
+<TR BGCOLOR="#99ccff">
+   <TH> Uncompressed Transfer Syntax </TH>
+   <TH> Description </TH>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2 </TD>
+   <TD> Little endian, implicit value representation</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.1 </TD>
+   <TD> Little endian, explicit value representation</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.2 </TD>
+   <TD> Big endian </TD>
+</TR>
+
+<!####### RLE #########>
+<TR BGCOLOR="#99ccff">
+   <TD> RLE Transfer Syntax </TD>
+   <TD></TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.5 </TD>
+   <TD> Run Length Encoding, Lossless</TD>
+</TR>
+
+<!####### JPEG #########>
+<TR BGCOLOR="#99ccff">
+   <TD> JPEG Transfer Syntax </TD>
+   <TD></TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.50 </TD>
+   <TD> Jpeg laseline (Process 1)</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.51 </TD>
+   <TD> Jpeg extended (Process 2 & 4) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.57 </TD>
+   <TD> Jpeg lossless, non-hierarchical (process 14) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.70 </TD>
+   <TD> Jpeg lossless, hierarchical, first-order
+        prediction (process 14, selection value 1) </TD>
+</TR>
+</TABLE>
+
+<!##############################################>
+<H2>Supported "Photometric Interpretation" pixel format</H2>
+The Photometric Interpretation UID is in the file's DICOM Tag field (0028,0004).
+
+<TABLE WIDTH="800" BORDER="0" CELLSPACING="1" CELLPADDING="10"
+       BGCOLOR="#ffffff">
+<TR BGCOLOR="#99ccff">
+   <TH> Photometric Interpretation" pixel format </TH>
+   <TH> Description </TH>
+</TR>
+<TR>
+   <TD> MONOCHROME1 </TD>
+   <TD> </TD>
+</TR>
+<TR>
+   <TD> MONOCHROME2 </TD>
+   <TD> </TD>
+</TR>
+<TR>
+   <TD> PALETTE COLOR </TD>
+   <TD> color image description</TD>
+</TR>
+<TR>
+   <TD> RGB </TD>
+   <TD> color image description</TD>
+</TR>
+<TR>
+   <TD> YBR_FULL </TD>
+   <TD> color image description</TD>
+</TR>
+<TR>
+   <TD> YBR_FULL_422 </TD>
+   <TD> color image description</TD>
+</TR>
+</TABLE>
+
+<!##############################################>
+<H2> Note on odd length data elements</H2>
+
+The Dicom Standard PS 3.5 (Data Structures and Encoding) specifies that
+the data element values which make up a DICOM data stream must be padded
+to an even length.
+<BR>
+Gdcm will <B>tolerate</B> an incorrectly formed odd length data field while
+<B>reading</B> (thus not enforcing the standard).
+<BR>
+But gdcm will allways <B>enforce</B> the standard while <B>writing</B>.
+
+<!##############################################>
+<H2> Note on undefined Value Representations</H2>
+
+If gdcm encounters an undefined VR (either because in a private group,
+or because it corresponds to an undocumented public dictionary entry
+when in implicit VR) while reading a file, it will set that data
+element's VR to be UN (unknown).
+
+<!##############################################>
+<H2>Note on retired and private data elements</H2>
+
+Certain data elements are no longer supported under the v3.0 of the DICOM
+standard but persist as retired element. Gdcm will consider those
+elements as standard data element, except that the tag name will be postfixed
+with the "(RET)" string.
+
+
+<!#######################################################################>
+<HR size="1"><ADDRESS style="align: right;"></ADDRESS>
+<H2><B>UN</B>Supported transfer syntaxes</H2>
+The Transfer Syntax UID is in the file's DICOM Tag field (0002,0010).
+                                                                                
+<TABLE WIDTH="800" BORDER="0" CELLSPACING="1" CELLPADDING="10"
+       BGCOLOR="#ffffff">
+<!####### Uncompressed #########>
+<TR BGCOLOR="#99ccff">
+   <TH> Jpeg UNSUPPORTED Transfer Syntax </TH>
+   <TH> Description </TH>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.52 </TD>
+   <TD> JPEG Extended (Process 3 & 5) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.53</TD>
+   <TD> JPEG Spectral Selection, Non-Hierarchical (Process 6 & 8)</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.54 </TD>
+   <TD> JPEG Spectral Selection, Non-Hierarchical (Process 7 & 9)</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.55 </TD>
+   <TD> JPEG Full Progression, Non-Hierarchical (Process 10 & 12)</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.56 </TD>
+   <TD> JPEG Full Progression, Non-Hierarchical (Process 11 & 13) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.58 </TD>
+   <TD> JPEG Lossless, Non-Hierarchical (Process 15) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.59 </TD>
+   <TD> JPEG Extended, Hierarchical (Process 16 & 18) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.60 </TD>
+   <TD> JPEG Extended, Hierarchical (Process 17 & 19)</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.61 </TD>
+   <TD> JPEG Spectral Selection, Hierarchical (Process 20 & 22) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.62 </TD>
+   <TD> JPEG Spectral Selection, Hierarchical (Process 21 & 23) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.63 </TD>
+   <TD> JPEG Full Progression, Hierarchical (Process 24 & 26)</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.64 </TD>
+   <TD> JPEG Full Progression, Hierarchical (Process 25 & 27) </TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.65 </TD>
+   <TD> JPEG Lossless, Hierarchical (Process 28)</TD>
+</TR>
+<TR>
+   <TD> 1.2.840.10008.1.2.4.66 </TD>
+   <TD> JPEG Lossless, Hierarchical (Process 29) </TD>
+</TR>
+</TABLE>
+
+
+<HR size="1"><ADDRESS style="align: right;"></ADDRESS>
+
+</BODY>
+</HTML>
